--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     --brand:#2882bb; --brand2:#2a8fcf;
     --bg:#f7f8fc; --ink:#0f172a; --muted:#667085; --line:#E7EAF3;
     --lime:#22c55e; --lime2:#a3e635; --danger:#ef4444;
-    --tag:#F2E7FF; --tag-ink:#6D28D9; --tag-shadow:0 4px 10px rgba(40,130,187,.18);
+    --tag:#F2E7FF; --tag-ink:#6D28D9;
+    /* sombras */
+    --tag-shadow:0 4px 10px rgba(40,130,187,.18);
     --card-shadow:0 18px 36px rgba(99,102,241,.12), 0 8px 24px rgba(40,130,187,.10);
+    --violet-rgb:99,102,241;              /* roxo das janelas */
   }
   *{box-sizing:border-box}
   body{
@@ -92,17 +95,14 @@
   /* ====== SLOT LIVRE (imagem flutuando, sem card) ====== */
   .free-card{background:transparent;border:0;box-shadow:none;padding:0}
   .free-pad{padding:10px}
-  .rr-img{display:block;width:100%;height:auto;object-fit:contain;pointer-events:none}
+  .rr-img{
+    display:block;width:100%;height:auto;object-fit:contain;pointer-events:none;
+    /* mesmo drop-shadow roxo das janelas/cards */
+    filter:
+      drop-shadow(0 18px 36px rgba(var(--violet-rgb), .18))
+      drop-shadow(0 8px 24px rgba(40,130,187,.10));
+  }
 
-  /* ====== AFFIX PDFs (lista + prévia leve) ====== */
-  .pdf-row{display:flex;flex-wrap:wrap;gap:8px;align-items:center}
-  .pdf-row b{font-size:14px}
-  .pdf-actions{display:flex;gap:8px}
-  .pdf-actions .link{font-size:12px;font-weight:800;padding:6px 10px;border-radius:10px;border:1px solid var(--line);background:#f7f8fd;cursor:pointer}
-  .pdf-actions .link:hover{transform:translateY(-1px)}
-  .preview{margin-top:8px;border:1px solid var(--line);border-radius:10px;overflow:hidden;display:none}
-  .preview iframe{width:100%;height:420px;border:0;background:#fff}
-  
   footer{margin:18px 0 6px;text-align:center}
   .copyright{font-size:12px;font-weight:700;color:#2882bb;padding:10px 12px;border-radius:10px;background:rgba(40,130,187,.06);display:inline-block}
   .credit{margin-top:4px;font-size:6px;color:#cfd6e3;display:block}
@@ -112,16 +112,13 @@
   <div class="wrap">
     <!-- HEADER -->
     <div class="hero">
-      <!-- esquerda (CRION) -->
       <img class="left-img" src="icon2.png"
            onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/icon2.png';"
            alt="Logo esquerdo">
-
-      <!-- ícones à direita: Post-it → Calculadora → HDS -->
       <div class="tools">
         <button id="toggleNote" type="button" class="iconbtn icon-note" title="Post-it">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-            <path d="M8 3h8a3 3 0 0 1 3 3v7l-7 7H8a3 3 0 0 1 3-3V6a3 3 0 0 1 3-3Z" stroke="#1f2937" stroke-width="2" fill="#fde68a"/>
+            <path d="M8 3h8a3 3 0 0 1 3 3v7l-7 7H8a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3Z" stroke="#1f2937" stroke-width="2" fill="#fde68a"/>
             <path d="M19 13h-4a3 3 0 0 0-3 3v4" stroke="#1f2937" stroke-width="2"/>
           </svg>
         </button>
@@ -133,8 +130,6 @@
           </svg>
         </button>
       </div>
-
-      <!-- direita (HDS) -->
       <img class="logo right-img" src="HDS.png"
            onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/HDS.png';"
            alt="HDS TEC">
@@ -184,28 +179,26 @@
         <div class="row">
           <button id="btnAlert" type="button" class="btn btn-search">Pesquisar</button>
         </div>
-
         <div class="hint" id="alertBusy" style="display:none">
           <div class="busy"><div class="spinner"></div><div>Pesquisando alerta...</div></div>
           <div class="bar" style="margin-top:6px"></div>
         </div>
-
         <div id="alertBox" class="out out-alert" style="display:none">
           <div id="alertMsg">—</div>
           <div id="alertResp" class="hint">—</div>
         </div>
       </section>
 
-      <!-- SITES OFICIAIS + PDFs AFFIX -->
+      <!-- SITES OFICIAIS -->
       <section class="card">
         <div class="tag">SITES OFICIAIS</div>
         <h2>CRION COMERCIAL (AFFIX, ALTER e CONECTA PLAN)</h2>
         <div class="row" style="margin-top:6px">
-          <input id="qSites" class="input" placeholder="Digite sua pergunta ….. (vazio = listar PDFs AFFIX)">
+          <input id="qSites" class="input" placeholder="Digite sua pergunta .....">
           <button id="btnSites" type="button" class="btn btn-search">Pesquisar</button>
         </div>
         <div class="hint" id="sitesBusy" style="display:none">
-          <div class="busy"><div class="spinner"></div><div>Processando…</div></div>
+          <div class="busy"><div class="spinner"></div><div>Pesquisando...</div></div>
           <div class="bar" style="margin-top:6px"></div>
         </div>
         <div id="outSites" class="out">—</div>
@@ -260,7 +253,6 @@ const esc  = s => String(s||"").replaceAll("&","&amp;").replaceAll("<","&lt;").r
 const cleanName = n => String(n||'').replace(/^(OCR_TMP_|TMP_SLIDES_)+/ig,'');
 const link = (url, txt) => `<a href="${url}" target="_blank" rel="noopener">${esc(txt||url)}</a>`;
 function humanSize(b){ if(!b||b<=0) return "—"; const u=["B","KB","MB","GB"]; let i=0; while(b>=1024&&i<u.length-1){ b/=1024; i++; } return b.toFixed(1)+" "+u[i]; }
-const norm = s => String(s||"").normalize("NFD").replace(/\p{Diacritic}/gu,"").toLowerCase();
 
 /* ======= CHAMADAS GAS ======= */
 function call(endpoint, payload){
@@ -270,95 +262,6 @@ function call(endpoint, payload){
     headers:{ "Content-Type":"text/plain" },
     body: JSON.stringify(payload || {})
   }).then(r=>{ if(!r.ok) throw new Error("HTTP "+r.status); return r.json(); });
-}
-
-/* ======= AFFIX PDFs (carrega do repositório) ======= */
-const GH_OWNER="HD-TECH-hash";
-const GH_REPO ="Ricai-crion-operacao";
-const AFFIX_DIR="data/affix/raw";
-const API_LIST = `https://api.github.com/repos/${GH_OWNER}/${GH_REPO}/contents/${AFFIX_DIR}?ref=main`;
-const MANIFEST_RAW = `https://raw.githubusercontent.com/${GH_OWNER}/${GH_REPO}/main/data/affix/manifest.json`;
-let AFFIX_FILES = null;
-
-async function loadAffixIndex(){
-  if(Array.isArray(AFFIX_FILES)) return AFFIX_FILES;
-  try{
-    const list = await fetch(API_LIST,{headers:{'Accept':'application/vnd.github+json'}}).then(r=>r.json());
-    const files = (Array.isArray(list)?list:[]).filter(it=>it.type==="file" && /\.pdf$/i.test(it.name))
-      .map(it=>({name:it.name, size:it.size||0, url:it.download_url, path:it.path, updated:null, source:null}));
-    // tenta enriquecer com manifest (se existir)
-    try{
-      const manResp = await fetch(MANIFEST_RAW);
-      if(manResp.ok){
-        const man = await manResp.json();
-        // formatos tolerantes: {items:[{dest,src,updated,size}]} ou {dest:{src,updated,size}}
-        if(Array.isArray(man.items)){
-          files.forEach(f=>{
-            const m = man.items.find(x=>x.dest===f.name || x.path===f.path);
-            if(m){ f.updated=m.updated||m.time||null; f.size=m.size||f.size; f.source=m.src||m.source||null; }
-          });
-        }else{
-          files.forEach(f=>{
-            const m = man[f.name] || man[f.path];
-            if(m){ f.updated=m.updated||m.time||null; f.size=m.size||f.size; f.source=m.src||m.source||null; }
-          });
-        }
-      }
-    }catch(_){}
-    AFFIX_FILES = files;
-    return files;
-  }catch(e){
-    console.error("Affix index error:", e);
-    AFFIX_FILES = [];
-    return [];
-  }
-}
-
-function renderAffixList(q){
-  const out = $('#outSites');
-  const term = norm(q||"");
-  const files = (AFFIX_FILES||[]).filter(f => !term || norm(f.name).includes(term));
-  if(!files.length){
-    out.innerHTML = 'Nenhum PDF encontrado em <b>data/affix/raw</b> para esse filtro.';
-    return;
-  }
-  const parts = [];
-  parts.push(`Resultados: <b>${files.length}</b>${term?` • filtro: “${esc(q)}”`:""}\n`);
-  files.forEach((f,idx)=>{
-    const id = `pdf_${idx}`;
-    const meta = [
-      f.size ? `Tamanho: ${humanSize(f.size)}` : null,
-      f.updated ? `Atualizado: ${new Date(f.updated).toLocaleString()}` : null
-    ].filter(Boolean).join(" • ");
-    parts.push(
-`<div class="item">
-  <div class="pdf-row">
-    <b>${esc(f.name)}</b>
-    <div class="pdf-actions">
-      <a class="link" href="${f.url}" target="_blank" rel="noopener">Abrir</a>
-      <button class="link" data-prev="${id}" data-url="${f.url}">Prévia</button>
-      ${f.source? `<a class="link" href="${f.source}" target="_blank" rel="noopener">Origem</a>`:""}
-    </div>
-  </div>
-  <div class="hint" style="margin-top:4px">${meta || ""}</div>
-  <div id="${id}" class="preview"></div>
-</div>`
-    );
-  });
-  out.innerHTML = parts.join("\n");
-
-  // liga botões de prévia (carrega sob demanda)
-  $$('#outSites [data-prev]').forEach(btn=>{
-    btn.addEventListener('click', ()=>{
-      const tgt = document.getElementById(btn.dataset.prev);
-      if(!tgt) return;
-      const isOpen = tgt.style.display==="block";
-      if(isOpen){ tgt.style.display="none"; tgt.innerHTML=""; return; }
-      const viewer = "https://docs.google.com/gview?embedded=1&url=" + encodeURIComponent(btn.dataset.url);
-      tgt.innerHTML = `<iframe src="${viewer}"></iframe>`;
-      tgt.style.display = "block";
-    });
-  });
 }
 
 /* ======= APP ======= */
@@ -410,40 +313,75 @@ document.addEventListener('DOMContentLoaded', () => {
     }finally{ show($('#alertBusy'),false); }
   });
 
-  /* SITES OFICIAIS + AFFIX PDFs */
+  /* SITES OFICIAIS */
   $('#btnSites')?.addEventListener('click', doSites);
   $('#qSites')?.addEventListener('keydown', e=>{ if(e.key==='Enter') doSites(); });
+
   async function doSites(){
-    const q = ($('#qSites').value||'').trim();
-    // MODO 1: listar PDFs locais (vazio = todos; com texto = filtro)
-    if(!q || !q.toLowerCase().startsWith('web:')){
-      show($('#sitesBusy'),true);
-      $('#outSites').textContent='—';
-      try{
-        await loadAffixIndex();
-        renderAffixList(q);
-      }catch(e){
-        $('#outSites').textContent='Erro ao listar PDFs: '+e.message;
-      }finally{
-        show($('#sitesBusy'),false);
-      }
-      return;
-    }
-    // MODO 2: pesquisa via GAS (forçar com prefixo "web: ")
-    const realQ = q.replace(/^web:\s*/i,'');
-    if(!realQ){ $('#outSites').textContent='Digite a pergunta.'; return; }
-    show($('#sitesBusy'),true); $('#outSites').textContent='—';
+    const q = ($('#qSites').value||'').trim().toLowerCase();
+    show($('#sitesBusy'), true);
+    $('#outSites').textContent = '—';
+
     try{
-      const qRich = realQ + " — FORMATO: responda em português com texto útil e liste as URLs oficiais no final. Substitua observações por: 'Fontes oficiais Affix, Alter, Hapvida'.";
-      const r = await call('chat',{q:qRich});
-      const txt = (r && r.text) ? r.text : '—';
-      const html = String(txt).replace(/(https?:\/\/[^\s]+)/g, m=>`<a href="${m}" target="_blank" rel="noopener">${m}</a>`);
-      $('#outSites').innerHTML = html;
-    }catch(e){ $('#outSites').textContent='Erro: '+e.message;
-    }finally{ show($('#sitesBusy'),false); }
+      const resp = await fetch('data/affix/manifest.json?ts=' + Date.now(), { cache:'no-store' });
+      if(!resp.ok) throw new Error('manifest.json não encontrado');
+      const manifest = await resp.json();
+
+      const files = Array.isArray(manifest) ? manifest
+                    : (manifest.files || Object.values(manifest));
+
+      const items = (files||[])
+        .map(f => {
+          const name = f.name || (f.local || '').split('/').pop() || '';
+          const localPath = (f.local && !f.local.startsWith('http'))
+              ? f.local.replace(/^\/+/, '')
+              : ('data/affix/raw/' + name);
+          return { name, size:f.size||0, localUrl: localPath };
+        })
+        .filter(f => !q || f.name.toLowerCase().includes(q));
+
+      let html = `<div class="hint">Resultados: ${items.length}${q?` • filtro: “${esc(q)}”`:''}</div>`;
+      items.forEach((it, i) => {
+        const openUrl = it.localUrl; // serve direto pelo GitHub Pages
+        html += `
+          <div class="item">
+            <div style="font-weight:800">${esc(it.name)}</div>
+
+            <div class="row" style="gap:8px;margin:6px 0 4px">
+              <a class="btn btn-plain" href="${openUrl}" target="_blank" rel="noopener">Abrir</a>
+              <button class="btn btn-plain" data-prev="${openUrl}" data-i="${i}">Prévia</button>
+            </div>
+
+            <div class="hint">Tamanho: ${humanSize(it.size)}</div>
+
+            <div id="prev_${i}" class="preview_box" style="display:none;margin-top:8px;border:1px solid var(--line);border-radius:10px;overflow:hidden;background:#fff">
+              <object data="${openUrl}#toolbar=1&zoom=page-width"
+                      type="application/pdf" width="100%" height="520">
+                <iframe src="${openUrl}#toolbar=1&zoom=page-width"
+                        style="width:100%;height:520px;border:0"></iframe>
+              </object>
+            </div>
+          </div>`;
+      });
+
+      $('#outSites').innerHTML = html || '—';
+
+      // toggle da prévia
+      $$('#outSites [data-prev]').forEach(btn => {
+        btn.addEventListener('click', () => {
+          const box = document.getElementById('prev_' + btn.dataset.i);
+          box.style.display = (!box.style.display || box.style.display === 'none') ? 'block' : 'none';
+        });
+      });
+
+    }catch(e){
+      $('#outSites').textContent = 'Erro: ' + e.message;
+    }finally{
+      show($('#sitesBusy'), false);
+    }
   }
 
-  /* CRION (mantido) */
+  /* CRION */
   $('#btnCRION')?.addEventListener('click', doCRION);
   $('#qCRION')?.addEventListener('keydown', e=>{ if(e.key==='Enter') doCRION(); });
   $('#btnReIdxCRION')?.addEventListener('click', async ()=>{
@@ -452,6 +390,7 @@ document.addEventListener('DOMContentLoaded', () => {
     catch(e){ $('#crionStatus').textContent='Erro: '+e.message; }
     finally{ show($('#crionBusy'),false); }
   });
+
   async function doCRION(){
     const q=($('#qCRION').value||'').trim();
     if(!q){ $('#crionStatus').textContent='Digite um termo.'; return; }
